bk_ida/gccida/c0/validize_mem
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validize_mem/src/explow.c:1088:25: error: use of undeclared identifier 'machine_mode'
|| !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), ref->fld[0].rtx) ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validize_mem/src/explow.c:1088:40: error: expected expression
|| !memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ref), ref->fld[0].rtx) ) 
                                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validize_mem/src/obj/explow.o] Error 1
